[package]
name = "baus"
version = "0.2.0"
edition = "2021"
description = "backed up ordering of standard input"
homepage = "https://github.com/yazgoo/baus"
repository = "https://github.com/yazgoo/baus"
license = "MIT"
authors = ["yazgoo"]

[dependencies]
miniserde = "0.1"
clap = { version = "3.0", features = ["derive"] }
dirs = "4.0"
